Updated Intro Blog

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="HandheldFriendly" content="True">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" type="text/css" href="assets/built/screen.css?v=53679a8be4">
+    <link rel="stylesheet" type="text/css" href="assets/built/screen.css?v=b30b6d0e81">
 
     <meta name="description" content="Comprehensive Online Arabic Education">
     <link rel="shortcut icon" href="favicon.png" type="image/png">
@@ -59,7 +59,7 @@
 }
     </script>
 
-    <script src="public/ghost-sdk.js?v=53679a8be4"></script>
+    <script src="public/ghost-sdk.js?v=b30b6d0e81"></script>
 <script>
 ghost.init({
 	clientId: "ghost-frontend",
@@ -117,7 +117,7 @@ ghost.init({
                 <h2 class="post-card-title">Arabicly: Learn Arabic Online</h2>
             </header>
             <section class="post-card-excerpt">
-                <p>As Salaamu Alaikum! Have you ever wanted to learn Arabic, but didn't know where to start? Are you a Muslim parent looking for a way to teach your child Arabic? Are you a</p>
+                <p>Greetings fellow learners! Learning is a lifelong journey, and we believe our Arabicly program can assist you in making it possible. Arabicly is a comprehsenive educational online platform; it provides beginner, intermediate, advanced</p>
             </section>
         </a>
         <footer class="post-card-meta">
@@ -163,7 +163,7 @@ ghost.init({
 
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous">
     </script>
-    <script type="text/javascript" src="assets/js/jquery.fitvids.js?v=53679a8be4"></script>
+    <script type="text/javascript" src="assets/js/jquery.fitvids.js?v=b30b6d0e81"></script>
 
     <script>
         // maxPages is a global variable that is needed to determine
@@ -171,7 +171,7 @@ ghost.init({
         // we reached the last page already.
         var maxPages = parseInt('1');
     </script>
-    <script src="assets/js/infinitescroll.js?v=53679a8be4"></script>
+    <script src="assets/js/infinitescroll.js?v=b30b6d0e81"></script>
 
     
 
