--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="HandheldFriendly" content="True">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" type="text/css" href="assets/built/screen.css?v=3301481714">
+    <link rel="stylesheet" type="text/css" href="assets/built/screen.css?v=aa3bc69d9c">
 
     <meta name="description" content="Comprehensive Online Arabic Education">
     <link rel="shortcut icon" href="favicon.png" type="image/png">
@@ -59,7 +59,7 @@
 }
     </script>
 
-    <script src="public/ghost-sdk.js?v=3301481714"></script>
+    <script src="public/ghost-sdk.js?v=aa3bc69d9c"></script>
 <script>
 ghost.init({
 	clientId: "ghost-frontend",
@@ -185,7 +185,7 @@ ghost.init({
                 <h2 class="post-card-title">Arabicly: Learn Arabic Online</h2>
             </header>
             <section class="post-card-excerpt">
-                <p>Greetings fellow learners! Learning is a lifelong journey, and we believe our Arabicly program can assist you in making it possible. Arabicly is a comprehsenive educational online platform; it provides beginner, intermediate, advanced</p>
+                <p>Hey fellow learners! Learning is a lifelong journey, and we believe our Arabicly program can assist you in making it possible. Arabicly is a comprehsenive educational online platform; it provides beginner, intermediate, advanced</p>
             </section>
         </a>
         <footer class="post-card-meta">
@@ -231,7 +231,7 @@ ghost.init({
 
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous">
     </script>
-    <script type="text/javascript" src="assets/js/jquery.fitvids.js?v=3301481714"></script>
+    <script type="text/javascript" src="assets/js/jquery.fitvids.js?v=aa3bc69d9c"></script>
 
     <script>
         // maxPages is a global variable that is needed to determine
@@ -239,7 +239,7 @@ ghost.init({
         // we reached the last page already.
         var maxPages = parseInt('1');
     </script>
-    <script src="assets/js/infinitescroll.js?v=3301481714"></script>
+    <script src="assets/js/infinitescroll.js?v=aa3bc69d9c"></script>
 
     
 
