--- a/arabicly-for-principals/index.html
+++ b/arabicly-for-principals/index.html
@@ -8,7 +8,7 @@
     <meta name="HandheldFriendly" content="True">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" type="text/css" href="../assets/built/screen.css?v=b6a6fd5d21">
+    <link rel="stylesheet" type="text/css" href="../assets/built/screen.css?v=b25a14f39b">
 
     <link rel="shortcut icon" href="../favicon.png" type="image/png">
     <link rel="canonical" href="index.html">
@@ -72,7 +72,7 @@
 }
     </script>
 
-    <script src="../public/ghost-sdk.js?v=b6a6fd5d21"></script>
+    <script src="../public/ghost-sdk.js?v=b25a14f39b"></script>
 <script>
 ghost.init({
 	clientId: "ghost-frontend",
@@ -171,16 +171,16 @@ ghost.init({
         <div class="read-next-feed">
 
                 <article class="post-card post">
-        <a class="post-card-image-link" href="../arabic-worksheets-letter-tracing/">
+        <a class="post-card-image-link" href="../arabic-worksheets-alphabet-letter-tracing/">
             <div class="post-card-image" style="background-image: url(https://images.unsplash.com/photo-1518895771514-9cb0f6ed3a1a?ixlib=rb-1.2.1&amp;q=80&amp;fm=jpg&amp;crop=entropy&amp;cs=tinysrgb&amp;w=1080&amp;fit=max&amp;ixid=eyJhcHBfaWQiOjExNzczfQ)"></div>
         </a>
     <div class="post-card-content">
-        <a class="post-card-content-link" href="../arabic-worksheets-letter-tracing/">
+        <a class="post-card-content-link" href="../arabic-worksheets-alphabet-letter-tracing/">
             <header class="post-card-header">
-                <h2 class="post-card-title">Arabic Worksheets: Letter Tracing</h2>
+                <h2 class="post-card-title">Arabic Worksheets: Alphabet Letter Tracing</h2>
             </header>
             <section class="post-card-excerpt">
-                <p>Salaam! Here are the links to arabic letter tracing work sheets provided by yeminlinks.com. Alif - أ Ba - ب Ta - ت Tha - ث Jeem - ج Ha - ح</p>
+                <p>Salaam! Here are the links to arabic alphabet letter tracing worksheets provided by yeminlinks.com. Alif - أ Ba - ب Ta - ت Tha - ث Jeem - ج Ha - ح</p>
             </section>
         </a>
         <footer class="post-card-meta">
@@ -288,7 +288,7 @@ ghost.init({
 
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous">
     </script>
-    <script type="text/javascript" src="../assets/js/jquery.fitvids.js?v=b6a6fd5d21"></script>
+    <script type="text/javascript" src="../assets/js/jquery.fitvids.js?v=b25a14f39b"></script>
 
 
     <script>
